--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 header {
